# operations-debs-contenttranslation-apertium-eo-fr

./: AUTHORS  Makefile.am  Projet-eo-fr  README  apertium-eo-fr.eo.dix  apertium-eo-fr.fr-eo.antaux1_t2x  apertium-eo-fr.fr-eo.antaux2_t2x  apertium-eo-fr.fr-eo.antaux3_t2x  apertium-eo-fr.fr-eo.antaux4_t2x  apertium-eo-fr.fr-eo.post_t2x  apertium-eo-fr.fr-eo.t1x  apertium-eo-fr.fr-eo.t2x  apertium-eo-fr.fr-eo.t3x  apertium-eo-fr.fr.acx  apertium-eo-fr.fr.dix  apertium-eo-fr.fr.tsx  apertium-eo-fr_0.9.0~r28336.orig.tar.gz.delta  apertium-eo-fr_0.9.0~r28336.orig.tar.gz.id  apertium-eo-fr_0.9.0~r57551.orig.tar.bz2.delta  compil_fr-eo  configure.ac  cross-model.xml  fr-eo-unsupervised.make  fr-eo.prob  inconsistency.sh  komparu.sh  kompletigaj-reguloj-eo.txt  kompletigu_eo_dix.sh  krei_monodix.pl  mankas_fr.sh  modes.xml  multigen_ino__n.sh  multigen_o__loc.sh  multigen_o__n.sh  multigen_oj__loc.sh  nova_versio.sh  outstanding-tests.sh  regression-tests.sh  retraduku.sh  testvoc_fr-eo.sh
debian/: changelog  control  rules
lexic/: dxexpartements.txt  dxexpartements.txt.eo-fr.dix  dxexpartements.txt.eo.dix  dxexpartements.txt.fr.dix  entreprises.txt  gentilxexs1.txt  gentilxexs2.txt  gentilxexs3.txt  gentilxexs4.txt  gentilxexs5.txt  klasi_verbojn.pl  klasi_verbojn_bidix.pl  krei_abraham.pl  krei_adv.pl  krei_loknomo.pl  krei_marie.pl  krei_npal.pl  krei_smith.pl  noms_de_famille.dix  noms_de_famille.srt  noms_de_famille.txt.bck  np_al.txt.eo-fr.dix  np_al.txt.eo.dix  np_al.txt.fr.dix  prenoms-f.dix  prenoms-f.txt  prenoms-m.dix  prenoms-m.txt  trans_kis_amb.txt  trans_kis_jes.txt  trans_kis_ne.txt  transitivaj.txt  transitivaj_ambaux.txt  transitivaj_ne.txt  villes.txt  villes.txt.eo-fr.dix  villes.txt.eo.dix  villes.txt.fr.dix  villes_belgique.txt  villes_canada.txt  (+1 more)
tekstaro/: fr.crp.txt
